--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
     <script>
-        const BASE_URL = "https://portal.fl0.com/api/eliastest/DEV/ButterInsuranceTest/flows";
+        const BASE_URL = "https://api.fl0.com/butter/dev/butterinsurancetest/flows";
         new Vue({
             el: '#app',
             vuetify: new Vuetify(),
